--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
-h1{color:red;font-family:Cabin Sketch, cursive;}
+body {
+  background-color:black;
+}
+a {
+  font-family:Times New Roman;
+  color:yellow;
+  target:blank;
+}
+p {
+  font-family:Brush Script MT;
+  color:cyan;
+  text-align:center;
+}
+p { 
+  font-family:verdana;
+  color:red;
+  text-align:center;
+}
