--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
 .title {
   font-family: 'Orbitron', sans-serif;
   color: #00eeff;
+  text-align: center;
 }
 .ipsum {
   font-family: 'Orbitron', sans-serif;
