--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url(../images/background.jpg) center;
+  background: #dbdbdb;
 }
 .title {
   font-family: 'Orbitron', sans-serif;
