--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   font-family: 'Orbitron', sans-serif;
   text-align: center;
 }
-.link1, .jisho {
+.link1, .jisho, .page1 {
   font-family: 'Electrolize', sans-serif;
   color: #00eeff;
 }
