--- a/css/pdfs.css
+++ b/css/pdfs.css
@@ -5,7 +5,7 @@ body {
   color: #ff5100;
   text-align: center;
 }
-.l1, .l2, .l3, .l4 {
+.l1, .l2, .l3, .l4, .l5 {
   color: #ff5100;
   display: block;
 }
