--- a/css/page.css
+++ b/css/page.css
@@ -3,7 +3,7 @@ body {
 }
 .title {
   font-family: 'Chakra Petch', sans-serif;
-  color: #00fff7;
+  color: #ff5100;
   text-align: center;
 }
 .text {
