--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,7 @@ body {
   font-family: 'Electrolize', sans-serif;
   color: #ff5100;
 }
+.gore {
+  font-family: 'Electrolize', sans-serif;
+  color: #fc0303;
+}
