--- a/css/pdfs.css
+++ b/css/pdfs.css
@@ -6,7 +6,7 @@ body {
   text-align: center;
   font-family: 'Changa', sans-serif;
 }
-.l1, .l2, .l3, .l4, .l5, .l6, .l7, .l8, .l9, .l2a, .l3a, .l4a, .l5a {
+.l1, .l2, .l3, .l4, .l5, .l6, .l7, .l8, .l9, .l2a, .l3a, .l4a, .l5a, .l6a, .l7a {
   color: #ff5100;
   display: block;
   font-family: 'Changa', sans-serif;
